--- a/templates/index.html
+++ b/templates/index.html
@@ -1,20 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-    <link type="text/css" rel="stylesheet" href="/static/index.css" />
+    <meta charset="utf-8"/>
+    <link type="text/css" rel="stylesheet" href="/static/index.css"/>
     <title> Hired | Hire from IITH </title>
+    <style>
+        html body {
+            width: 100vw;
+            height: 100vh;
+            box-sizing: border-box;
+            padding: 0;
+            margin: 0;
+        }
+
+        .CenterRowFlex {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .CenterColumnFlex {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .container {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(128, 00, 256, 256);
+            text-align: center;
+            color: red;
+            font-weight: bold;
+            font-size: 25px;
+        }
+
+        .wrapper {
+            width: 100%;
+            height: 40%;
+            justify-content: space-around;
+        }
+
+        .Title {
+            font-size: 100px;
+            color: yellow;
+        }
+
+        h2 {
+            color: lightcyan;
+        }
+
+        .buttonHolder {
+            width: 22%;
+            justify-content: space-between;
+        }
+
+        .button {
+            box-sizing: border-box;
+            padding: 10px 20px;
+            border: 1px solid black;
+            border-radius: 5px;
+            box-shadow: 0 0 4px 2px grey;
+        }
+    </style>
 </head>
 <body>
 <div id="container" class="CenterRowFlex container class2">
-  <div class="CenterColumnFlex wrapper">
-    <div class="Title">Hired</div>
-    <h2>Hire from IIT Hyderabad</h2>
-    <div class="CenterRowFlex buttonHolder">
-        <button class="button"> <a href="/slogin">Student's Corner</a></button>
-        <button class="button"> <a href="/rlogin">Recruiter's Corner</a></button>
+    <div class="CenterColumnFlex wrapper">
+        <div class="Title">Hired</div>
+        <h2>Hire from IIT Hyderabad</h2>
+        <div class="CenterRowFlex buttonHolder">
+            <button class="button"><a href="/slogin">Student's Corner</a></button>
+            <button class="button"><a href="/rlogin">Recruiter's Corner</a></button>
+        </div>
     </div>
-  </div>
 </div>
 </body>
 </html>
